[gd_scene load_steps=21 format=3 uid="uid://lhj1i6i3n3m5"]

[ext_resource type="Script" path="res://scenes/player/player.gd" id="1_rmgix"]
[ext_resource type="Shader" path="res://shaders/color_override_rgb.gdshader" id="2_1fj5r"]
[ext_resource type="Texture2D" uid="uid://6ia5po676wyo" path="res://icon.svg" id="3_md7v2"]
[ext_resource type="Script" path="res://scenes/player/camera_shake.gd" id="4_85w7j"]
[ext_resource type="PackedScene" uid="uid://bp37v1mggsqk1" path="res://scenes/player/arm.tscn" id="4_nusvh"]
[ext_resource type="PackedScene" uid="uid://dcg5wt8golmu0" path="res://scenes/items/firearms/knife.tscn" id="5_877m5"]
[ext_resource type="PackedScene" uid="uid://1tahulpvv1yx" path="res://scenes/items/firearms/bow.tscn" id="5_qlaea"]
[ext_resource type="PackedScene" uid="uid://blstrv861klnq" path="res://scenes/items/firearms/swat_pistol.tscn" id="6_c06jj"]
[ext_resource type="PackedScene" uid="uid://4irmvqpiik2w" path="res://scenes/items/firearms/smg.tscn" id="7_t3c88"]
[ext_resource type="PackedScene" uid="uid://dqkbgvgw765b1" path="res://scenes/items/firearms/bubbelhead.tscn" id="8_2jd4w"]

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_6ubh2"]
properties/0/path = NodePath(".:position")
properties/0/spawn = true
properties/0/sync = true
properties/1/path = NodePath(".:rotation")
properties/1/spawn = true
properties/1/sync = true
properties/2/path = NodePath(".:proxy_velocity")
properties/2/spawn = true
properties/2/sync = true
properties/3/path = NodePath("ItemsPivot:position")
properties/3/spawn = true
properties/3/sync = true
properties/4/path = NodePath("ItemsPivot:rotation")
properties/4/spawn = true
properties/4/sync = true

[sub_resource type="Animation" id="Animation_hr1gw"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimationPlayer/SpawnTransition/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_m2s00"]
resource_name = "respawn"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimationPlayer/SpawnTransition/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4, 0.5, 0.7, 0.9, 1.2, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 1), Color(0.498039, 0.498039, 0.498039, 0.423529), Color(0.231373, 0.231373, 0.231373, 0.396078), Color(0, 0, 0, 0.800784), Color(0, 0, 0, 0.501961), Color(1, 1, 1, 0)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Camera2D")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.4, 1.2),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [0.6],
"method": &"shake"
}, {
"args": [0.2],
"method": &"shake"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ouyk7"]
_data = {
"RESET": SubResource("Animation_hr1gw"),
"respawn": SubResource("Animation_m2s00")
}

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_nvhk1"]
polygon = PackedVector2Array(-52, -64, 52, -64, 60, -60, 64, -52, 64, 52, 60, 60, 52, 64, -52, 64, -60, 60, -64, 52, -64, -52, -60, -60)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_hutk1"]
shader = ExtResource("2_1fj5r")
shader_parameter/color = Color(1, 1, 1, 1)

[sub_resource type="CircleShape2D" id="CircleShape2D_lj7gp"]
radius = 64.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_to3lh"]
custom_solver_bias = 0.01
size = Vector2(96, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tely7"]
custom_solver_bias = 0.01
size = Vector2(72, 14)

[sub_resource type="CircleShape2D" id="CircleShape2D_sk15u"]
custom_solver_bias = 0.01
radius = 14.0

[node name="Player" type="CharacterBody2D"]
motion_mode = 1
script = ExtResource("1_rmgix")

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_6ubh2")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ouyk7")
}

[node name="SpawnTransition" type="CanvasLayer" parent="AnimationPlayer"]

[node name="ColorRect" type="ColorRect" parent="AnimationPlayer/SpawnTransition"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0)

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
occluder = SubResource("OccluderPolygon2D_nvhk1")

[node name="Icon" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_hutk1")
texture = ExtResource("3_md7v2")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_lj7gp")

[node name="Camera2D" type="Camera2D" parent="."]
position_smoothing_enabled = true
script = ExtResource("4_85w7j")

[node name="ArmL" parent="." instance=ExtResource("4_nusvh")]
z_index = -3
position = Vector2(0, -64)

[node name="ArmLShapeA" type="CollisionShape2D" parent="."]
position = Vector2(48, -64)
shape = SubResource("RectangleShape2D_to3lh")

[node name="ArmLShapeB" type="CollisionShape2D" parent="."]
position = Vector2(132, -64)
shape = SubResource("RectangleShape2D_tely7")

[node name="ArmLShapeC" type="CollisionShape2D" parent="."]
position = Vector2(168, -64)
shape = SubResource("CircleShape2D_sk15u")

[node name="ArmR" parent="." instance=ExtResource("4_nusvh")]
z_index = -3
position = Vector2(0, 64)
flipped = true

[node name="ArmRShapeA" type="CollisionShape2D" parent="."]
position = Vector2(48, 64)
shape = SubResource("RectangleShape2D_to3lh")

[node name="ArmRShapeB" type="CollisionShape2D" parent="."]
position = Vector2(132, 64)
shape = SubResource("RectangleShape2D_tely7")

[node name="ArmRShapeC" type="CollisionShape2D" parent="."]
position = Vector2(168, 64)
shape = SubResource("CircleShape2D_sk15u")

[node name="ItemsPivot" type="Node2D" parent="."]

[node name="HPPivot" type="Marker2D" parent="ItemsPivot"]
position = Vector2(-112, 0)

[node name="HPAnchor" type="Marker2D" parent="ItemsPivot/HPPivot"]

[node name="Label" type="Label" parent="ItemsPivot/HPPivot/HPAnchor"]
offset_left = -31.0
offset_top = -16.0
offset_right = 34.0
offset_bottom = 17.0
theme_override_font_sizes/font_size = 21
text = "100HP"
horizontal_alignment = 2
vertical_alignment = 1

[node name="ItemsContainer" type="Marker2D" parent="ItemsPivot"]
z_index = -1
position = Vector2(128, 0)

[node name="SwatPistol" parent="ItemsPivot/ItemsContainer" instance=ExtResource("6_c06jj")]

[node name="SMG" parent="ItemsPivot/ItemsContainer" instance=ExtResource("7_t3c88")]

[node name="Bow" parent="ItemsPivot/ItemsContainer" instance=ExtResource("5_qlaea")]
shake_energy = 0.3

[node name="Bubbelhead" parent="ItemsPivot/ItemsContainer" instance=ExtResource("8_2jd4w")]
shake_energy = 0.18

[node name="Knife" parent="ItemsPivot/ItemsContainer" instance=ExtResource("5_877m5")]
position = Vector2(6, 36)
